(chore): YAGNI style + warning fixes

--- a/sections/experience.tex
+++ b/sections/experience.tex
@@ -6,7 +6,7 @@
   \cventry
     {Software Engineer}
     {Uptrust}
-    {Typescript, Coffeescript, GraphQL, Firebase, Twilio, AWS Postgres, CircleCI}
+    {\textbf{Languages \& Technologies:} Typescript, Coffeescript, GraphQL, Firebase, Twilio, AWS Postgres, CircleCI}
     {Apr. 2021 - Jun. 2022}
     {
       \begin{cvitems}
@@ -20,7 +20,7 @@
 %---------------------------------------------------------
   \cvthreeentry
     {Salesforce}
-    {Java, Python, gRPC, Solr, AWS EKS, Terraform, Oracle PL/SQL, Spinnaker, Jenkins}
+    {\textbf{Languages \& Technologies:} Java, Python, gRPC, Solr, AWS EKS, Terraform, Oracle PL/SQL, Spinnaker, Jenkins}
     {Senior Software Engineer}
     {Mar. 2017 - Apr. 2021}
     {Intern (Core Search)}
@@ -40,7 +40,7 @@
   \cventry
     {Software Engineering Intern}
     {Annai Systems}
-    {C/C++, Bash, Make/CMake, OpenSSL EVP, UDP, UDT, NAT Traversal}
+    {\textbf{Languages \& Technologies:} C/C++, Python, Bash, Make/CMake, OpenSSL EVP, UDP, UDT, NAT Traversal}
     {June. 2014 - Sep. 2014}
     {
       \begin{cvitems}
