--- a/sections/research.tex
+++ b/sections/research.tex
@@ -5,7 +5,7 @@
   \cventry
     {Undergraduate Researcher} % Affiliation/role
     {Cryptographic Security of Novel Hypermedia Protocols} % Organization/group
-    {} % Location
+    {} % Skills
     {2016} % Date(s)
     {
       \begin{cvitems} % Description(s) of experience/contributions/knowledge
@@ -17,7 +17,7 @@
   \cventry
     {Undergraduate Researcher} % Affiliation/role
     {Autonomous Mapping and Navigation} % Organization/group
-    {} % Location
+    {} % Skills
     {2011 - 2013} % Date(s)
     {
       \begin{cvitems} % Description(s) of experience/contributions/knowledge
