(fix): Proper paper link

--- a/sections/research.tex
+++ b/sections/research.tex
@@ -9,7 +9,7 @@
     {2016} % Date(s)
     {
       \begin{cvitems} % Description(s) of experience/contributions/knowledge
-        \item {Analyzed the crytographic security of IPFS, a peer-to-peer distributed protocol and application suite. (\underline{\href{https://madhuvk.com/ipfs_security.pdf}{Paper}})}
+        \item {Analyzed the crytographic security of IPFS, a peer-to-peer distributed protocol and application suite. (\underline{\href{https://www.madhuvk.com/ipfs_security.pdf}{Paper}})}
       \end{cvitems}
     }
 
