(fix): Header spacing

--- a/resume.tex
+++ b/resume.tex
@@ -21,6 +21,7 @@
 %-------------------------------------------------------------------------------
 \begin{document}
 
+\frenchspacing
 \makecvheader[C]
 
 \input{sections/education}
