--- a/sections/experience.tex
+++ b/sections/experience.tex
@@ -6,7 +6,7 @@
   \cventry
     {Software Engineer}
     {Uptrust}
-    {\textbf{Languages \& Technologies:} Typescript, Coffeescript, GraphQL, Firebase, Twilio, AWS Postgres, CircleCI}
+    {\textbf{Languages \& Technologies:} Typescript, Coffeescript, GraphQL, Firebase, React, Twilio, AWS Postgres, CircleCI}
     {Apr. 2021 - Jun. 2022}
     {
       \begin{cvitems}
@@ -20,7 +20,7 @@
 %---------------------------------------------------------
   \cvthreeentry
     {Salesforce}
-    {\textbf{Languages \& Technologies:} Java, Python, gRPC, Solr, AWS EKS, Terraform, Oracle PL/SQL, Spinnaker, Jenkins}
+    {\textbf{Languages \& Technologies:} Java, Python, Go, gRPC, Solr, AWS EKS, Terraform, Oracle PL/SQL, Spinnaker, Jenkins}
     {Senior Software Engineer}
     {Mar. 2017 - Apr. 2021}
     {Intern (Core Search)}
