--- a/sections/skills.tex
+++ b/sections/skills.tex
@@ -12,12 +12,12 @@
 %---------------------------------------------------------
   \cvskill
     {Languages} % Category
-    {Java, Typescript/Javascript, Python, C/C++, Bash, MATLAB, Haskell, LaTeX} % Skills
+    {Java, Typescript, Javascript, Python, Go, C/C++, Bash, MATLAB, Haskell, LaTeX} % Skills
 
 %---------------------------------------------------------
   \cvskill
     {Technologies} % Category
-    {Postgres, Node.js, gRPC, GraphQL, Kafka, Solr, Datadog, Splunk, Kubernetes, Terraform, AWS, Microservices, Git} % Skills
+    {Postgres, Node.js, gRPC, GraphQL, React, Solr, Kafka, Datadog, Splunk, Kubernetes, Terraform, AWS, Microservices, Git} % Skills
 
 %---------------------------------------------------------
 \end{cvskills}
