--- a/sections/experience.tex
+++ b/sections/experience.tex
@@ -20,7 +20,7 @@
 %---------------------------------------------------------
   \cvthreeentry
     {Salesforce}
-    {\textbf{Languages \& Technologies:} Java, Python, Go, gRPC, Solr, AWS EKS, Terraform, Oracle PL/SQL, Spinnaker, Jenkins}
+    {\textbf{Languages \& Technologies:} Java, Python, Go, gRPC, Solr, EKS, Terraform, PL/SQL, Spinnaker, Jenkins}
     {Senior Software Engineer}
     {Mar. 2017 - Apr. 2021}
     {Intern (Core Search)}
