--- a/sections/education.tex
+++ b/sections/education.tex
@@ -1,11 +1,9 @@
 \cvsection{Education}
 
-
 \begin{cventries}
-%---------------------------------------------------------
   \cveducation
     {University of California, San Diego}
-    {Sep. 2012 - Dec. 2016} % Date(s)
+    {Sep. 2012 - Dec. 2016}
     {
       \vspace{-4.5mm}
       \begin{description}
@@ -18,11 +16,9 @@
       \vspace{-4.0mm}
     }
     {
-      \begin{cvitems} % Description(s) bullet points
+      \begin{cvitems}
         \item {Undergraduate Tutor}
         \item {Tau Beta Pi Honor Society (Vice-President)}
       \end{cvitems}
     }
-
-%---------------------------------------------------------
 \end{cventries}
