--- a/sections/experience.tex
+++ b/sections/experience.tex
@@ -1,23 +1,20 @@
 \cvsection{Work Experience}
 
 \begin{cventries}
-
-%---------------------------------------------------------
   \cventry
     {Software Engineer}
     {Uptrust}
-    {\textbf{Languages \& Technologies:} Typescript, Coffeescript, GraphQL, Firebase, React, Twilio, AWS Postgres, CircleCI}
+    {\textbf{Languages \& Technologies:} TypeScript, CoffeeScript, GraphQL, Firebase, React, Twilio, AWS Postgres, CircleCI}
     {Apr. 2021 - Jun. 2022}
     {
       \begin{cvitems}
-        \item {Reduced customer attrition by contributing to key product features - video chat, announcements, recurring events, and multiple staff members.}
-        \item {Unlocked more customers by increasing messaging throughput using a new data access layer and optimized cross-service network requests.}
+        \item {Reduced customer attrition by leading technical execution on key product features - announcements, recurring events, and multiple staff members.}
+        \item {Unlocked customer growth by improving system efficiency, increasing messaging throughput, and optimizing cross-service communication.}
         \item {Enhanced messaging service quality by introducing rate-limiting, at-least-once queue delivery, and backpressure.}
         \item {Improved failure incidence and detection by implementing automatic consumer retries, queue alerts, and structured logging.}
       \end{cvitems}
     }
 
-%---------------------------------------------------------
   \cvthreeentry
     {Salesforce}
     {\textbf{Languages \& Technologies:} Java, Python, Go, gRPC, Solr, EKS, Terraform, PL/SQL, Spinnaker, Jenkins}
@@ -29,14 +26,13 @@
     {Jun. 2015 - Sep. 2015}
     {
       \begin{cvitems}
-        \item {Attained optimistic search business timelines for the new public cloud architecture, Hyperforce, by leading the implementation of a "many-namespace" solution for developer productivity - presented the design and results to the CTO and principal architects.}
-        \item {Reached performance targets for Hyperforce and real-time search suggestions by reducing tail latencies with optimized backend fan-out.}
+        \item {Attained optimistic timelines for Hyperforce, a public cloud rearchitecture, by proposing and leading a project to remove a major development bottleneck. Presented the design and results to the CTO and Principal Architects.}
+        \item {Reached performance targets for Hyperforce and real-time search suggestions by optimizing backend fanout to reduce tail latencies.}
         \item {Improved CTR and Precision@K search metrics in Hyperforce by owning and deploying the ML model execution engine.}
         \item {Shortened the development lifecycle by implementing key features for feature-toggling, A/B experimentation, and ML model deployments.}
       \end{cvitems}
     }
 
-%---------------------------------------------------------
   \cventry
     {Software Engineering Intern}
     {Annai Systems}
@@ -44,9 +40,7 @@
     {June. 2014 - Sep. 2014}
     {
       \begin{cvitems}
-        \item {Enabled encrypted transport of genome sequences by extending UDT, a WAN-optimized application-layer protocol.}
+        \item {Enabled secure transport of genome sequences by encryping UDT, a WAN-optimized application-layer protocol.}
       \end{cvitems}
     }
-
-%---------------------------------------------------------
 \end{cventries}
