--- a/sections/projects.tex
+++ b/sections/projects.tex
@@ -3,40 +3,33 @@
 \cvsubsection{Competitions}
 
 \begin{cvhonors}
-%---------------------------------------------------------
   \cvhonor
-    {Winner of `Coolest Hack'} % Award
-    {Einstin Cloud Hackathon (Multi-Armed Bandit Experimentation)} % Event
-    {} % Location
-    {2020} % Date(s)
+    {Coolest Hack}
+    {Einstein Cloud Hackathon}
+    {Multi-Armed Bandit Experimentation}
+    {2020}
 
-%---------------------------------------------------------
   \cvhonor
-    {3rd Place} % Award
-    {Facebook Hackathon (Facebook Reconnect)} % Event
-    {} % Location
-    {2014} % Date(s)
+    {3rd Place}
+    {Facebook Hackathon}
+    {Facebook Reconnect}
+    {2014}
 
-%---------------------------------------------------------
   \cvhonor
-    {2nd Place} % Award
-    {Intuit Hackathon (Triton Exchange)} % Event
-    {} % Location
-    {2013} % Date(s)
+    {2nd Place}
+    {Intuit Hackathon}
+    {Triton Exchange}
+    {2013}
 
-%---------------------------------------------------------
   \cvhonor
-    {2nd Place} % Award
-    {Intel ISEF Sweepstakes} % Event
-    {} % Location
-    {2012} % Date(s)
+    {2nd Place}
+    {Intel ISEF Sweepstakes}
+    {}
+    {2012}
 
-%---------------------------------------------------------
   \cvhonor
-    {1st Place} % Award
-    {Greater San Diego Science and Engineering Fair} % Event
-    {} % Location
-    {2012} % Date(s)
-
-%---------------------------------------------------------
+    {1st Place}
+    {Greater SD Science and Engineering Fair}
+    {}
+    {2012}
 \end{cvhonors}
