--- a/sections/research.tex
+++ b/sections/research.tex
@@ -1,32 +1,29 @@
 \cvsection{Research Experience}
 
 \begin{cventries}
-%---------------------------------------------------------
   \cventry
-    {Undergraduate Researcher} % Affiliation/role
-    {Cryptographic Security of Novel Hypermedia Protocols} % Organization/group
-    {} % Skills
-    {2016} % Date(s)
+    {Undergraduate Researcher}
+    {Cryptographic Security of Novel Hypermedia Protocols}
+    {}
+    {2016}
     {
-      \begin{cvitems} % Description(s) of experience/contributions/knowledge
-        \item {Analyzed the crytographic security of IPFS, a peer-to-peer distributed protocol and application suite. (\underline{\href{https://www.madhuvk.com/ipfs_security.pdf}{Paper}})}
+      \begin{cvitems}
+        \item {Analyzed the crytographic security of IPFS, a peer-to-peer distributed protocol and application suite.
+          (\underline{\href{https://www.madhuvk.com/ipfs_security.pdf}{Paper}})}
       \end{cvitems}
     }
 
-%---------------------------------------------------------
   \cventry
-    {Undergraduate Researcher} % Affiliation/role
-    {Autonomous Mapping and Navigation} % Organization/group
-    {} % Skills
-    {2011 - 2013} % Date(s)
+    {Undergraduate Researcher}
+    {Autonomous Mapping and Navigation}
+    {}
+    {2011 - 2013}
     {
-      \begin{cvitems} % Description(s) of experience/contributions/knowledge
+      \begin{cvitems}
         \item \textit{Edge-based Crowd Detection from Single Image Datasets}
-        (Published in \underline{\href{https://ijcsi.org/papers/IJCSI-12-1-1-18-22.pdf}{IJCSI, Vol. 12}})
+          (Published in \underline{\href{https://ijcsi.org/papers/IJCSI-12-1-1-18-22.pdf}{IJCSI, Vol. 12}})
         \item \textit{Autonomous Mapping and Navigation through Edge-based Optical Flow and Time-to-Collision}
-        (Published in \underline{\href{https://www.arpnjournals.com/jeas/research_papers/rp_2012/jeas_1212_836.pdf}{ARPN, Vol. 7}})
+          (Published in \underline{\href{https://www.arpnjournals.com/jeas/research_papers/rp_2012/jeas_1212_836.pdf}{ARPN, Vol. 7}})
       \end{cvitems}
     }
-
-%---------------------------------------------------------
 \end{cventries}
