--- a/sections/skills.tex
+++ b/sections/skills.tex
@@ -1,23 +1,37 @@
-%-------------------------------------------------------------------------------
-%	SECTION TITLE
-%-------------------------------------------------------------------------------
 \cvsection{Skills \& Qualifications}
 
-
-%-------------------------------------------------------------------------------
-%	CONTENT
-%-------------------------------------------------------------------------------
 \begin{cvskills}
-
-%---------------------------------------------------------
   \cvskill
-    {Languages} % Category
-    {Java, Typescript, Javascript, Python, Go, C/C++, Bash, MATLAB, Haskell, LaTeX} % Skills
+    {Languages}
+    {
+      Java,
+      TypeScript,
+      JavaScript,
+      Python,
+      Go,
+      C/C++,
+      Bash,
+      MATLAB,
+      Haskell,
+      LaTeX
+    }
 
-%---------------------------------------------------------
   \cvskill
-    {Technologies} % Category
-    {Postgres, Node.js, gRPC, GraphQL, React, Solr, Kafka, Datadog, Splunk, Kubernetes, Terraform, AWS, Microservices, Git} % Skills
-
-%---------------------------------------------------------
+    {Technologies}
+    {
+      Postgres,
+      Node.js,
+      gRPC,
+      GraphQL,
+      React,
+      Solr,
+      Kafka,
+      Datadog,
+      Splunk,
+      Kubernetes,
+      Terraform,
+      AWS,
+      Microservices,
+      Git
+    }
 \end{cvskills}
